[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/menus/visual_pipescript/node_placer.gd" type="Script" id=1]
[ext_resource path="res://pipescript/bin/pipescript.gdns" type="Script" id=2]
[ext_resource path="res://scenes/menus/visual_pipescript/camera_mover.gd" type="Script" id=3]
[ext_resource path="res://scenes/menus/visual_pipescript/visual_editor_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/menus/level_designer/background.tres" type="Material" id=5]
[ext_resource path="res://scenes/menus/visual_pipescript/editor_background.png" type="Texture2D" id=6]
[ext_resource path="res://scenes/menus/visual_pipescript/visual_compiler.gd" type="Script" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="PipeScript" type="Node" parent="."]
script = ExtResource( 2 )

[node name="VisualCompiler" type="Node" parent="PipeScript"]
script = ExtResource( 7 )

[node name="FunctionHandler" type="Node" parent="PipeScript"]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 3 )

[node name="Graph" type="Control" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Theme" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Titlebar" type="Panel" parent="CanvasLayer/Theme"]
anchor_right = 1.0
offset_bottom = 40.0

[node name="Run" type="Button" parent="CanvasLayer/Theme/Titlebar"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
focus_mode = 0
text = "Run"

[node name="Save" type="Button" parent="CanvasLayer/Theme/Titlebar"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_bottom = -10.0
focus_mode = 0
text = "Save"

[node name="Load" type="Button" parent="CanvasLayer/Theme/Titlebar"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = -30.0
offset_bottom = -10.0
focus_mode = 0
text = "Load"

[node name="SelectionMenu" type="ScrollContainer" parent="CanvasLayer/Theme"]
anchor_bottom = 1.0
offset_top = 40.0
offset_right = 4.0
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Theme/SelectionMenu"]
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BGGrid" type="TextureRect" parent="Background"]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="CanvasLayer/Theme/Titlebar/Run" to="." method="_on_Run_pressed"]
